--- a/style.css
+++ b/style.css
@@ -4,15 +4,11 @@ h3{font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
     height: 100vh ;
     width: 80%;
     margin: auto;
-    grid-template-columns:25% 50% 25% ;
-    grid-template-rows: 2fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns:25% 50% 25fr ;
+    grid-template-rows: 2fr 1fr ;
     grid-template-areas: 
     "student breaking  CSS"
-    "boy pol pol"
-    "boy tech tech "
-    "boy loc loc "
-    "boy op op "
-    "boy sports sports";
+    "boy r5 r5";
     border: 1px;
     text-align: center;
 }
@@ -36,25 +32,28 @@ h3{font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 #pol{
     background-color: rgb(197, 197, 21);
-    grid-area: pol;
+    padding: 2px;
+    height: 7vh;
 }
 #tech{
     background-color:skyblue ;
-  grid-area: tech;
+  padding: 2px;
+  height: 7vh;
 }
 #loc{
     background-color:rgb(17, 82, 204) ;
-grid-area: loc;
+padding: 2px;
+height: 7vh;
 }
 #op{
     background-color:rgb(6, 128, 81);
-    grid-area: op;
-
+    padding: 2px;
+    height: 7vh;
 }
 #sports{
     background-color: blueviolet;
-    grid-area:sports ;
-
+    padding: 2px;
+    height: 7vh;
 }
 
 
@@ -75,9 +74,15 @@ h3{
         "breaking"
         "CSS"
         "boy"
-        "pol"
-        "tech"
-        "op"
-        "sport" ;
+        "r5" ;
     }
 }
+#asa{
+    text-align: left;
+}
+.r5{
+    grid-area: r5;
+    border: 1px solid;
+
+}
+
